--- a/node/auth/public/register.html
+++ b/node/auth/public/register.html
@@ -2,24 +2,21 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Login</title>
+        <title>Register</title>
         <link type="text/css" rel="stylesheet" href="mystyle.css">
     </head>
     <body>
-        <h1>Login</h1>
+        <h3>Register</h3>
         <hr />
         <div class="box">
-        <form action="/login" method="post" name="userForm">
-            <div>
+        <form action="/register" method="post" name="userForm">
             <p>Userid &nbsp;<input type="text" name="id" size="10"></p>
             <p>Password &nbsp;<input type="password" name="pw" size="10"></p>
-            </div>
             <div class="box-inner">
-            <input type="submit" value="Login" />&nbsp;&nbsp;
-            <input type="submit" value="Reset" /><br><br>
-            </div>
+            <input type="submit" value="Register" />&nbsp;&nbsp;
+            <input type="submit" value="Reset" /><br>
+            </div> 
         </form>
-        <a href="register.html">Register</a>
         </div>
     </body>
 </html>
